# packet_tracer

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  playwright.config.ts  project-report.html  rolldown.config.ts
src/: context.rs  main.rs
src/api/: mod.rs  user.rs
src/database/: init.sql  mod.rs  network.rs  user.rs
src/frontend/: theme.css  types.ts
src/frontend/components/: NodeEditPanel.tsx  dataedges.tsx  sidebar.tsx
src/frontend/components/nodes/: computer.tsx  nas.tsx  router.tsx  server.tsx  switch.tsx
src/frontend/pages/home/: index.html  index.tsx  index.tsxsqtqii.bck
src/frontend/pages/landing/: index.tsx
src/frontend/pages/login/: index.html  index.tsx
src/frontend/pages/register/: index.tsx
tests/: button.spec.ts  database_tests.rs
util/: mockdb.ts
util/debug_db/: docker-compose.yml
