[package]
name = "packet_tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["json"] }
dotenvy = "0.15.7"
password-auth = "1.0.0"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["fs"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }